Added symbolic handling of functions, so that we can take partial derivatives and rearange k-operators correctly.

--- a/nqcpfem/sympy_tester.ipynb
+++ b/nqcpfem/sympy_tester.ipynb
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,32 +1606,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'A' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ff \u001b[39m=\u001b[39m sympy\u001b[39m.\u001b[39mPiecewise((A,x\u001b[39m>\u001b[39m\u001b[39m0\u001b[39m),(\u001b[39m0\u001b[39m,\u001b[39mTrue\u001b[39;00m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'A' is not defined"
+     ]
+    }
+   ],
    "source": [
     "ff = sympy.Piecewise((A,x>0),(0,True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\begin{cases} A z & \\text{for}\\: x > 0 \\wedge y > 0 \\\\0 & \\text{otherwise} \\end{cases}$"
-      ],
-      "text/plain": [
-       "Piecewise((A*z, (x > 0) & (y > 0)), (0, True))"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = sympy.symbols('A')\n",
     "y,z = sympy.symbols('y,z')\n",
@@ -1640,12 +1638,13 @@
     "\n",
     "gg = sympy.Piecewise((A*z,y>0),(0,True))\n",
     "ggg=(f*gg).simplify()\n",
-    "ggg"
+    "ggg\n",
+    "x,y,z = sympy.symbols('x,y,z')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,11 +1682,26 @@
     "        sym = symbols_list.pop(0)\n",
     "        new_exprs = []\n",
     "        for expr in exprs:\n",
-    "            if expr[1].is_constant(sym):\n",
-    "                new_exprs.append((expr[0]+(0,),expr[1]))\n",
+    "            expression = expr[1]\n",
+    "            print(expression,expression.is_polynomial(z),isinstance(expression,sympy.Add))\n",
+    "            if not expression.is_polynomial(sym):\n",
+    "                if isinstance(expression,sympy.Add):\n",
+    "                    # remove the parts that are not polynomials\n",
+    "                    not_poly = sympy.Add(*(a for a in expression.args if not a.is_polynomial(sym)))\n",
+    "                    is_poly = sympy.Add(*(a for a in expression.args if a.is_polynomial(sym)))\n",
+    "                    new_exprs.append((expr[0]+(None,),not_poly))\n",
+    "                    print(not_poly,is_poly)\n",
+    "                    expression = is_poly\n",
+    "                else:\n",
+    "                    new_exprs.append((expr[0]+(None,),expression)) # not polynomial # not polynomial\n",
+    "            \n",
+    "            if expression.is_constant(sym):\n",
+    "                new_exprs.append((expr[0]+(0,),expression))\n",
     "                continue \n",
     "            # treat all the expressions in expres as univariate polynomial in sym (and all other symbols as constants)\n",
-    "            univariate_expr = polys.Poly(expr[1],sym)#domain=domain)\n",
+    "            \n",
+    "            \n",
+    "            univariate_expr = polys.Poly(expression,sym)#domain=domain)\n",
     "            new_exprs.extend(((expr[0]+t[0],t[1]) for t in univariate_expr.all_terms()))\n",
     "        exprs = new_exprs\n",
     "        \n",
@@ -1697,28 +1711,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "PolynomialError",
-     "evalue": "non-commutative expressions are not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mPolynomialError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m expression \u001b[39m=\u001b[39m kx\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mky\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m+\u001b[39m\u001b[39m3\u001b[39m\u001b[39m*\u001b[39mkz\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\u001b[39m+\u001b[39m\u001b[39m4\u001b[39m\u001b[39m*\u001b[39mkx\u001b[39m*\u001b[39mky\u001b[39m*\u001b[39mV\u001b[39m+\u001b[39m\u001b[39m5\u001b[39m\u001b[39m*\u001b[39mky\u001b[39m*\u001b[39mkz\u001b[39m*\u001b[39mW \u001b[39m+\u001b[39m \u001b[39m6\u001b[39m\u001b[39m*\u001b[39mkx\u001b[39m*\u001b[39mky\u001b[39m*\u001b[39mkz\n\u001b[1;32m      9\u001b[0m E\u001b[39m=\u001b[39msplit_up_multivariate_polynomial(polynomial,(x,y,z))\n\u001b[0;32m---> 10\u001b[0m EE\u001b[39m=\u001b[39msplit_up_multivariate_polynomial(expression,(x,y,z,kx,ky,kz,V,W))\n",
-      "Cell \u001b[0;32mIn[21], line 39\u001b[0m, in \u001b[0;36msplit_up_multivariate_polynomial\u001b[0;34m(poly, symbols)\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[39mcontinue\u001b[39;00m \n\u001b[1;32m     38\u001b[0m     \u001b[39m# treat all the expressions in expres as univariate polynomial in sym (and all other symbols as constants)\u001b[39;00m\n\u001b[0;32m---> 39\u001b[0m     univariate_expr \u001b[39m=\u001b[39m polys\u001b[39m.\u001b[39;49mPoly(expr[\u001b[39m1\u001b[39;49m],sym)\u001b[39m#domain=domain)\u001b[39;00m\n\u001b[1;32m     40\u001b[0m     new_exprs\u001b[39m.\u001b[39mextend(((expr[\u001b[39m0\u001b[39m]\u001b[39m+\u001b[39mt[\u001b[39m0\u001b[39m],t[\u001b[39m1\u001b[39m]) \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m univariate_expr\u001b[39m.\u001b[39mall_terms()))\n\u001b[1;32m     41\u001b[0m exprs \u001b[39m=\u001b[39m new_exprs\n",
-      "File \u001b[0;32m~/miniconda3/envs/Germanium_Spins_FE/lib/python3.10/site-packages/sympy/polys/polytools.py:182\u001b[0m, in \u001b[0;36mPoly.__new__\u001b[0;34m(cls, rep, *gens, **args)\u001b[0m\n\u001b[1;32m    180\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_from_poly(rep, opt)\n\u001b[1;32m    181\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 182\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39;49m\u001b[39m.\u001b[39;49m_from_expr(rep, opt)\n",
-      "File \u001b[0;32m~/miniconda3/envs/Germanium_Spins_FE/lib/python3.10/site-packages/sympy/polys/polytools.py:311\u001b[0m, in \u001b[0;36mPoly._from_expr\u001b[0;34m(cls, rep, opt)\u001b[0m\n\u001b[1;32m    308\u001b[0m \u001b[39m@classmethod\u001b[39m\n\u001b[1;32m    309\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_from_expr\u001b[39m(\u001b[39mcls\u001b[39m, rep, opt):\n\u001b[1;32m    310\u001b[0m     \u001b[39m\"\"\"Construct a polynomial from an expression. \"\"\"\u001b[39;00m\n\u001b[0;32m--> 311\u001b[0m     rep, opt \u001b[39m=\u001b[39m _dict_from_expr(rep, opt)\n\u001b[1;32m    312\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_from_dict(rep, opt)\n",
-      "File \u001b[0;32m~/miniconda3/envs/Germanium_Spins_FE/lib/python3.10/site-packages/sympy/polys/polyutils.py:348\u001b[0m, in \u001b[0;36m_dict_from_expr\u001b[0;34m(expr, opt)\u001b[0m\n\u001b[1;32m    346\u001b[0m \u001b[39m\"\"\"Transform an expression into a multinomial form. \"\"\"\u001b[39;00m\n\u001b[1;32m    347\u001b[0m \u001b[39mif\u001b[39;00m expr\u001b[39m.\u001b[39mis_commutative \u001b[39mis\u001b[39;00m \u001b[39mFalse\u001b[39;00m:\n\u001b[0;32m--> 348\u001b[0m     \u001b[39mraise\u001b[39;00m PolynomialError(\u001b[39m'\u001b[39m\u001b[39mnon-commutative expressions are not supported\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m    350\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_is_expandable_pow\u001b[39m(expr):\n\u001b[1;32m    351\u001b[0m     \u001b[39mreturn\u001b[39;00m (expr\u001b[39m.\u001b[39mis_Pow \u001b[39mand\u001b[39;00m expr\u001b[39m.\u001b[39mexp\u001b[39m.\u001b[39mis_positive \u001b[39mand\u001b[39;00m expr\u001b[39m.\u001b[39mexp\u001b[39m.\u001b[39mis_Integer\n\u001b[1;32m    352\u001b[0m             \u001b[39mand\u001b[39;00m expr\u001b[39m.\u001b[39mbase\u001b[39m.\u001b[39mis_Add)\n",
-      "\u001b[0;31mPolynomialError\u001b[0m: non-commutative expressions are not supported"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b*y*z + c*x**2*z**4 + x**2 + 2*x*y*z + x*y*sin(z) + x*sin(a) + y**2 + z**3 False True\n",
+      "c*z**4 + 1 True True\n",
+      "2*y*z + y*sin(z) + sin(a) False True\n",
+      "b*y*z + y**2 + z**3 True True\n",
+      "c*z**4 + 1 True True\n",
+      "2*z + sin(z) False True\n",
+      "sin(z) 2*z\n",
+      "sin(a) True False\n",
+      "1 True False\n",
+      "b*z True False\n",
+      "z**3 True False\n",
+      "4*V(x)*k_{x}*k_{y} + 5*W(x)*k_{y}*k_{z} + 6*k_{x}*k_{y}*k_{z} + k_{x}**2 + 2*k_{y}**2 + 3*k_{z}**2 True True\n",
+      "4*V(x)*k_{x}*k_{y} + 5*W(x)*k_{y}*k_{z} + 6*k_{x}*k_{y}*k_{z} + k_{x}**2 + 2*k_{y}**2 + 3*k_{z}**2 True True\n",
+      "4*V(x)*k_{x}*k_{y} + 5*W(x)*k_{y}*k_{z} + 6*k_{x}*k_{y}*k_{z} + k_{x}**2 + 2*k_{y}**2 + 3*k_{z}**2 True True\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[((2, 0, 4), c),\n",
+       " ((2, 0, 0), 1),\n",
+       " ((1, 1, None), sin(z)),\n",
+       " ((1, 1, 1), 2),\n",
+       " ((1, 0, 0), sin(a)),\n",
+       " ((0, 2, 0), 1),\n",
+       " ((0, 1, 1), b),\n",
+       " ((0, 0, 3), 1)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "_a,_b,_c = sympy.symbols('a,b,c')\n",
-    "polynomial = x**2+y**2+z**3+x*y*z+sympy.sin(_a)*x+_b*z*y+x*y*z+_c*z**4*x**2\n",
+    "polynomial = x**2+y**2+z**3+x*y*z+sympy.sin(_a)*x+_b*z*y+x*y*z+_c*z**4*x**2+ sympy.sin(z)*x*y\n",
     "\n",
     "kx,ky,kz = sympy.symbols('k_{x},k_{y},k_{z}',commutative=False)\n",
     "V,W = sympy.symbols('V(x),W(x)')\n",
@@ -1726,7 +1762,9 @@
     "expression = kx**2+2*ky**2+3*kz**2+4*kx*ky*V+5*ky*kz*W + 6*kx*ky*kz\n",
     "\n",
     "E=split_up_multivariate_polynomial(polynomial,(x,y,z))\n",
-    "EE=split_up_multivariate_polynomial(expression,(x,y,z,kx,ky,kz,V,W))\n"
+    "EE=split_up_multivariate_polynomial(expression,(x,y,z))\n",
+    "\n",
+    "E"
    ]
   },
   {
@@ -3040,6 +3078,243 @@
    ],
    "source": [
     "A.reshape(2,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z = sympy.symbols('z')\n",
+    "L = sympy.symbols('L',constant=True)\n",
+    "N = sympy.symbols('N',constant=True)\n",
+    "F = sympy.symbols('F(x)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with sympy.evaluate(False):\n",
+    "    F = sympy.Integral(z**2*sympy.sin(z)**2*sympy.cos(z*F)*L,(z,-N,N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\int\\limits_{- N}^{N} 1 L z^{2} \\sin^{2}{\\left(z \\right)} \\cos{\\left(z \\left(- F(x) L \\left(- \\frac{N^{2} \\sin^{3}{\\left(N \\right)}}{3} - \\frac{2 N \\sin^{2}{\\left(N \\right)} \\cos{\\left(N \\right)}}{3} - \\frac{4 N \\cos^{3}{\\left(N \\right)}}{9} + \\frac{14 \\sin^{3}{\\left(N \\right)}}{27} + \\frac{4 \\sin{\\left(N \\right)} \\cos^{2}{\\left(N \\right)}}{9}\\right) + F(x) L \\left(\\frac{N^{2} \\sin^{3}{\\left(N \\right)}}{3} + \\frac{2 N \\sin^{2}{\\left(N \\right)} \\cos{\\left(N \\right)}}{3} + \\frac{4 N \\cos^{3}{\\left(N \\right)}}{9} - \\frac{14 \\sin^{3}{\\left(N \\right)}}{27} - \\frac{4 \\sin{\\left(N \\right)} \\cos^{2}{\\left(N \\right)}}{9}\\right)\\right) \\right)}\\, dz$"
+      ],
+      "text/plain": [
+       "Integral(1*(L*((z**2*sin(z)**2)*cos(z*(-F(x)*L*(-N**2*sin(N)**3/3 - 2*N*sin(N)**2*cos(N)/3 - 4*N*cos(N)**3/9 + 14*sin(N)**3/27 + 4*sin(N)*cos(N)**2/9) + F(x)*L*(N**2*sin(N)**3/3 + 2*N*sin(N)**2*cos(N)/3 + 4*N*cos(N)**3/9 - 14*sin(N)**3/27 - 4*sin(N)*cos(N)**2/9))))), (z, -N, N))"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\begin{cases} F(x) z + 2 & \\text{for}\\: z > 0 \\\\0 & \\text{otherwise} \\end{cases}$"
+      ],
+      "text/plain": [
+       "Piecewise((F(x)*z + 2, z > 0), (0, True))"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sympy.Piecewise((Z*F+2,Z>0),(0,True)).expand()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kx,ky,kz = sympy.symbols('kx,ky,kz',commutative=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}kx ky kx & 0\\\\0 & 1\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "[[kx*ky*kx, 0], [0, 1]]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = sympy.Array([[kx*ky*kx,0],[0,1]])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[kx**2*ky, 0],\n",
+       "       [0, 1]], dtype=object)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sympy.lambdify((kx,ky),A,dummify=True)(kx,ky)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[kx*ky]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "B = np.array([[ky*kx]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False]])"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A == B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'commutative': False,\n",
+       " 'prime': False,\n",
+       " 'real': False,\n",
+       " 'noninteger': False,\n",
+       " 'composite': False,\n",
+       " 'extended_positive': False,\n",
+       " 'extended_nonnegative': False,\n",
+       " 'complex': False,\n",
+       " 'nonzero': False,\n",
+       " 'transcendental': False,\n",
+       " 'irrational': False,\n",
+       " 'zero': False,\n",
+       " 'negative': False,\n",
+       " 'extended_negative': False,\n",
+       " 'nonnegative': False,\n",
+       " 'extended_nonzero': False,\n",
+       " 'extended_nonpositive': False,\n",
+       " 'extended_real': False,\n",
+       " 'imaginary': False,\n",
+       " 'even': False,\n",
+       " 'odd': False,\n",
+       " 'algebraic': False,\n",
+       " 'integer': False,\n",
+       " 'positive': False,\n",
+       " 'nonpositive': False,\n",
+       " 'rational': False}"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kx.assumptions0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle Dummy_{3613}$"
+      ],
+      "text/plain": [
+       "_Dummy_3613"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sympy.Dummy()"
    ]
   },
   {
