Polished symbolic manipulation (projection part) Refactoring spin_gap

--- a/nqcpfem/dolfinx_assembly_variables.ipynb
+++ b/nqcpfem/dolfinx_assembly_variables.ipynb
@@ -194,7 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "<dolfinx.fem.forms.Form at 0x7fdb1da60e50>"
+       "<dolfinx.fem.forms.Form at 0x7f879191a7f0>"
       ]
      },
      "execution_count": 13,
@@ -632,7 +632,7 @@
     }
    ],
    "source": [
-    "A"
+    "A/"
    ]
   },
   {
@@ -778,43 +778,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  [0, x[0] * x[1] ** 2, 2.0 * x[0] * x[1] ** 2, 3.0 * x[0] * x[1] ** 2],\n",
+      "  [4.0 * x[0] * x[1] ** 2, 5.0 * x[0] * x[1] ** 2, 6.0 * x[0] * x[1] ** 2, 7.0 * x[0] * x[1] ** 2],\n",
+      "  [8.0 * x[0] * x[1] ** 2, 9.0 * x[0] * x[1] ** 2, 10.0 * x[0] * x[1] ** 2, 11.0 * x[0] * x[1] ** 2],\n",
+      "  [12.0 * x[0] * x[1] ** 2, 13.0 * x[0] * x[1] ** 2, 14.0 * x[0] * x[1] ** 2, 15.0 * x[0] * x[1] ** 2]\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "R[0,0] \n",
+    "\n",
+    "\n",
+    "A = np.arange(16).reshape(4,4).astype(np.complex128)\n",
+    "\n",
+    "tA = ufl.as_tensor(A*x[0]*x[1]**2)\n",
+    "print(tA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Sum(IntValue(2), Constant(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0), (), 0))"
+       "array([[Zero((), (), ()),\n",
+       "        Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),))),\n",
+       "        Product(FloatValue(2.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(3.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),))))],\n",
+       "       [Product(FloatValue(4.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(5.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(6.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(7.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),))))],\n",
+       "       [Product(FloatValue(8.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(9.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(10.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(11.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),))))],\n",
+       "       [Product(FloatValue(12.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(13.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(14.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),)))),\n",
+       "        Product(FloatValue(15.0), Indexed(SpatialCoordinate(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0)), MultiIndex((FixedIndex(0),))))]],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "R[0,0] "
+    "np.array([a*x[0] for a in A.ravel()]).reshape(A.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ufl_consta' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[45], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m ufl_consta\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ufl_consta' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ A | A_{i_{52}, i_{53}} = x[0] * ([\n",
+      "  [0, 1.0, 2.0, 3.0],\n",
+      "  [4.0, 5.0, 6.0, 7.0],\n",
+      "  [8.0, 9.0, 10.0, 11.0],\n",
+      "  [12.0, 13.0, 14.0, 15.0]\n",
+      "])[i_{52}, i_{53}] }\n"
      ]
     }
    ],
    "source": [
-    "ufl_consta"
+    "x = ufl.SpatialCoordinate(V)\n",
+    "print(tA*x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Form([Integral(IndexSum(IndexSum(Product(Indexed(Grad(Indexed(Argument(FunctionSpace(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0), TensorElement(FiniteElement('Lagrange', triangle, 1), shape=(2, 4), symmetry={})), 1, None), MultiIndex((Index(44), Index(45))))), MultiIndex((FixedIndex(1),))), Indexed(Conj(Argument(FunctionSpace(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0), TensorElement(FiniteElement('Lagrange', triangle, 1), shape=(2, 4), symmetry={})), 0, None)), MultiIndex((Index(44), Index(45))))), MultiIndex((Index(44),))), MultiIndex((Index(45),))), 'cell', Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0), 'everywhere', {}, None)])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "u= ufl.TrialFunction(V)\n",
+    "v = ufl.TestFunction(V)\n",
+    "I = ufl.indices(2)\n",
+    "u[I].dx(1)*ufl.conj(v)[I]*ufl.dx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indexed(Argument(FunctionSpace(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0), TensorElement(FiniteElement('Lagrange', triangle, 1), shape=(2, 4), symmetry={})), 1, None), MultiIndex((FixedIndex(0), FixedIndex(0))))"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u[0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FunctionSpace(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0), TensorElement(FiniteElement('Lagrange', triangle, 1), shape=(2, 4), symmetry={}))"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ComponentTensor(IndexSum(Product(Indexed(ComponentTensor(Indexed(Grad(Argument(FunctionSpace(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0), TensorElement(FiniteElement('Lagrange', triangle, 1), shape=(2, 4), symmetry={})), 1, None)), MultiIndex((Index(21), Index(22), FixedIndex(1)))), MultiIndex((Index(21), Index(22)))), MultiIndex((Index(23), Index(25)))), Indexed(Conj(Argument(FunctionSpace(Mesh(VectorElement(FiniteElement('Lagrange', triangle, 1), dim=2), 0), TensorElement(FiniteElement('Lagrange', triangle, 1), shape=(2, 4), symmetry={})), 0, None)), MultiIndex((Index(25), Index(24))))), MultiIndex((Index(25),))), MultiIndex((Index(23), Index(24))))"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u.dx(1)*ufl.conj(v)"
    ]
   },
   {
@@ -1328,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
