Oribtal effects study+ QoL impr + Started  Strain

--- a/notebooks/Fenics init test.ipynb
+++ b/notebooks/Fenics init test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,8 +23,8 @@
     "u = ufl.TrialFunction(function_space)\n",
     "v = ufl.TestFunction(function_space)\n",
     "\n",
-    "i = ufl.Index()\n",
-    "poisson = ufl.grad(u)[i]*ufl.grad(ufl.conj(v))[i]\n",
+    "i = ufl.indices(1)[0]\n",
+    "poisson = -ufl.grad(u)[i]*ufl.grad(ufl.conj(v))[i]*ufl.dx\n",
     "\n",
     "\n",
     "\n"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,18 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "#convert to CSR\n",
-    "A = csr_matrix(A.getValuesCSR[::-1])"
+    "A = csr_matrix(A.getValuesCSR()[::-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A_mat_with_boundary = A_mat +boundary"
+    "A = A +boundary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,28 +121,28 @@
     "s_form = dolfinx.fem.form(s_form)\n",
     "S = dolfinx.fem.petsc.assemble_matrix(s_form)\n",
     "S.assemble()\n",
-    "S_mat = csr_matrix(S.getValuesCSR)\n",
+    "S = csr_matrix(S.getValuesCSR()[::-1])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from petsc4py import PETSc\n",
     "# PETSc Stuff\n",
     "petsc_A = PETSc.Mat().createAIJ(size=A.shape,csr=(A.indptr,A.indices,A.data))\n",
-    "petsc_A.assaemble()\n",
+    "petsc_A.assemble()\n",
     "\n",
     "petsc_S = PETSc.Mat().createAIJ(size=S.shape,csr=(S.indptr,S.indices,S.data))\n",
-    "petsc_S.assaemble()\n"
+    "petsc_S.assemble()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,20 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "eig_problem.setTarget(0)\n",
-    "eig_problem.setWhichEigenpairs(SLEPc.EPS.Which.LARGEST_MAGNITUDE)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,19 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "eig_problem.setProblemType(SLEPc.EPS.ProblemType.GHEP) # hermitian eigenvalue problem\n",
-    "eig_problem.setType(SLEPc.EPS.Type:KRYLOVSCHUR)) # set method for solving\n",
+    "eig_problem.setType(SLEPc.EPS.Type.KRYLOVSCHUR) # set method for solving\n",
     "eig_problem.setOperators(petsc_A,petsc_S) # define matrices of the problem\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,9 +227,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "184530ac4c964ac2b79b798754253fb8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value=\"<iframe src='http://localhost:41403/index.html?ui=P_0x7f0509f4ac20_0&reconnect=auto' style='widt…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Plot the eigensolution to verify that it is correct\n",
     "import pyvista\n",
@@ -243,7 +257,7 @@
     "\n",
     "I = 0\n",
     "\t\n",
-    "grid[\"u\"] = np.abs(eigenvectors[I])\n",
+    "grid[\"u\"] = np.real(eigenvectors[I])\n",
     "\n",
     "warped = grid.warp_by_scalar('u')\n",
     "\n",
@@ -253,6 +267,13 @@
     "p.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
