update dolfinx to 0.7.3

--- a/notebooks/Fenics init test.ipynb
+++ b/notebooks/Fenics init test.ipynb
@@ -251,7 +251,7 @@
     "\n",
     "\n",
     "p = pyvista.Plotter()\n",
-    "topology, cell_types, x = dolfinx.plot.create_vtk_mesh(function_space)\n",
+    "topology, cell_types, x = dolfinx.plot.vtk_mesh(function_space)\n",
     "grid = pyvista.UnstructuredGrid(topology, cell_types, x)\n",
     "\n",
     "\n",
